compiler/lume_hir_lower/src/snapshots/lume_hir_lower__tests__implicit_imports@Range<Int32>.snap
---
source: compiler/lume_hir_lower/src/tests.rs
description: "fn foo() -> Range<Int32> { }"
---
Map {
    package: PackageId(
        0,
    ),
    items: {
        ItemId(
            14135399907963487766,
        ): Function(
            FunctionDefinition {
                id: ItemId(
                    14135399907963487766,
                ),
                func_id: None,
                visibility: Private,
                name: Path {
                    root: [],
                    name: Type {
                        name: Identifier {
                            name: "foo",
                            location: <internal>:3:6,
                        },
                        type_arguments: [],
                        location: <internal>:3:6,
                    },
                    location: <internal>:3:6,
                },
                parameters: [],
                type_parameters: TypeParameters {
                    inner: [],
                },
                return_type: Type {
                    id: ItemId(
                        16374546919383828530,
                    ),
                    name: Path {
                        root: [
                            Namespace {
                                name: Identifier {
                                    name: "std",
                                    location: <internal>:0:0,
                                },
                            },
                        ],
                        name: Type {
                            name: Identifier {
                                name: "Range",
                                location: <internal>:0:0,
                            },
                            type_arguments: [],
                            location: <internal>:0:0,
                        },
                        location: <internal>:0:0,
                    },
                    location: <internal>:12:26,
                },
                block: Some(
                    Block {
                        statements: [],
                        location: <internal>:25:28,
                    },
                ),
                location: <internal>:0:28,
            },
        ),
    },
    statements: {},
    expressions: {},
}
