compiler/lume_hir_lower/src/snapshots/lume_hir_lower__tests__implicit_imports@UInt32.snap
---
source: compiler/lume_hir_lower/src/tests.rs
description: "fn foo() -> UInt32 { }"
---
Map {
    package: PackageId(
        0,
    ),
    items: {
        ItemId(
            17561646994490527473,
        ): Function(
            FunctionDefinition {
                id: ItemId(
                    17561646994490527473,
                ),
                func_id: None,
                visibility: Private,
                name: SymbolName {
                    namespace: None,
                    name: Named(
                        Identifier {
                            name: "foo",
                            location: <internal>:3:6,
                        },
                    ),
                    location: <internal>:3:6,
                },
                parameters: [],
                type_parameters: TypeParameters {
                    inner: [],
                },
                return_type: Some(
                    Type {
                        id: ItemId(
                            15034187724793307808,
                        ),
                        name: SymbolName {
                            namespace: Some(
                                PathRoot {
                                    segments: [
                                        Named(
                                            Identifier {
                                                name: "std",
                                                location: <internal>:0:0,
                                            },
                                        ),
                                    ],
                                },
                            ),
                            name: Named(
                                Identifier {
                                    name: "UInt32",
                                    location: <internal>:0:0,
                                },
                            ),
                            location: <internal>:0:0,
                        },
                        type_params: [],
                        location: <internal>:12:18,
                    },
                ),
                block: Some(
                    Block {
                        statements: [],
                        location: <internal>:19:22,
                    },
                ),
                location: <internal>:0:22,
            },
        ),
    },
    statements: {},
    expressions: {},
}
