compiler/lume_hir_lower/src/snapshots/lume_hir_lower__tests__literal_snapshots@bool_false.snap
---
source: compiler/lume_hir_lower/src/tests.rs
description: false;
---
[
    Statement {
        id: StatementId {
            def: ItemId(
                0,
            ),
            index: Idx(
                0,
            ),
        },
        kind: Expression(
            Expression {
                id: ExpressionId {
                    def: ItemId(
                        0,
                    ),
                    index: Idx(
                        1,
                    ),
                },
                location: <internal>:0:5,
                kind: Literal(
                    Literal {
                        id: ExpressionId {
                            def: ItemId(
                                0,
                            ),
                            index: Idx(
                                1,
                            ),
                        },
                        location: <internal>:0:5,
                        kind: Boolean(
                            BooleanLiteral {
                                id: ExpressionId {
                                    def: ItemId(
                                        0,
                                    ),
                                    index: Idx(
                                        1,
                                    ),
                                },
                                value: false,
                            },
                        ),
                    },
                ),
            },
        ),
        location: <internal>:0:5,
    },
]
