compiler/lume_hir_lower/src/snapshots/lume_hir_lower__tests__literal_snapshots@bool_true.snap
---
source: compiler/lume_hir_lower/src/tests.rs
description: true;
---
[
    Statement {
        id: StatementId {
            def: ItemId(
                0,
            ),
            index: Idx(
                0,
            ),
        },
        kind: Expression(
            Expression {
                id: ExpressionId {
                    def: ItemId(
                        0,
                    ),
                    index: Idx(
                        1,
                    ),
                },
                kind: Literal(
                    Literal {
                        id: ExpressionId {
                            def: ItemId(
                                0,
                            ),
                            index: Idx(
                                1,
                            ),
                        },
                        kind: Boolean(
                            BooleanLiteral {
                                id: ExpressionId {
                                    def: ItemId(
                                        0,
                                    ),
                                    index: Idx(
                                        1,
                                    ),
                                },
                                value: true,
                            },
                        ),
                        location: <internal>:0:4,
                    },
                ),
                location: <internal>:0:4,
            },
        ),
        location: <internal>:0:4,
    },
]
